# riso-spec-kit

./: .gitmodules  CHANGELOG.md  README.md  pyproject.toml  spec-driven.md
docs/: ARCHITECTURE.md  installation.md  local-development.md  quickstart.md
memory/: constitution.md
scripts/bash/: create-new-feature.sh  epic-breakdown.sh  story-management.sh
scripts/powershell/: common.ps1  create-new-feature.ps1
src/specify_cli/: __init__.py  bottleneck_detector.py  config.py  constitution.py  epic_analyzer.py  estimation_analyzer.py  progress_tracker.py  risk_analyzer.py  story_analyzer.py  story_manager.py  validation.py  workflow_runner.py
templates/: plan-template.md  tasks-index-template.md  tasks-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution-applying.md  constitution-upgrade.md  constitution-validation.md  constitution.md  epic.md  implement.md  plan.md  specify.md  status.md  story.md  tasks.md
templates/risotech/: core.md  epic-breakdown.md  flexible.md  high-priority.md  progress-report.md  story-template.md
templates/risotech/constitution-presets/: django-postgresql.md  nextjs-tailwind.md  react-typescript.md
tests/: __init__.py  test_config.py  test_constitution.py  test_constitution_presets.py  test_epic_analyzer.py  test_epic_workflow_integration.py  test_full_workflow_integration.py  test_story_manager.py  test_validation.py  test_workflow_runner.py
